<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:clickable="true"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_spa"
            android:textColor="#00E5FF"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_spa"
            android:textColor="#AAAAAA"
            android:textSize="20sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/categoryGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintBottom_toTopOf="@+id/instructionText">

        <FrameLayout
            android:id="@+id/itemMassage"
            android:layout_width="210dp"
            android:layout_height="145dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/selector_card">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_massage" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/massage" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/itemFacial"
            android:layout_width="210dp"
            android:layout_height="145dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/selector_card">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_facial" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/facial" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/itemSalon"
            android:layout_width="210dp"
            android:layout_height="145dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/selector_card">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_salon" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/salon" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/itemGym"
            android:layout_width="210dp"
            android:layout_height="145dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/selector_card">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_gym" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="12dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/gym" />
        </FrameLayout>

    </GridLayout>

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use arrows to navigate, OK to select"
        android:textColor="#88FFFFFF"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>