<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        android:contentDescription="Back Button"
        android:focusable="true"
        android:clickable="true"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hotel_info"
            android:textColor="#00E5FF"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_discover"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/infoGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/hintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <include layout="@layout/item_menu_category" android:id="@+id/btnFacilities"
            android:layout_width="200dp" android:layout_height="145dp" />
        <include layout="@layout/item_menu_category" android:id="@+id/btnWifi"
            android:layout_width="200dp" android:layout_height="145dp" />
        <include layout="@layout/item_menu_category" android:id="@+id/btnDining"
            android:layout_width="200dp" android:layout_height="145dp" />
        <include layout="@layout/item_menu_category" android:id="@+id/btnLocalGuide"
            android:layout_width="200dp" android:layout_height="145dp" />
        <include layout="@layout/item_menu_category" android:id="@+id/btnSafety"
            android:layout_width="200dp" android:layout_height="145dp" />
        <include layout="@layout/item_menu_category" android:id="@+id/btnCheckout"
            android:layout_width="200dp" android:layout_height="145dp" />
    </GridLayout>

    <TextView
        android:id="@+id/hintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_hint"
        android:textColor="#88FFFFFF"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>