<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel_background"> <View
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:clickable="true"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_room_service"
            android:textColor="#00E5FF"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_select_service"
            android:textColor="#AAAAAA"
            android:textSize="20sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/categoryGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/instructionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <include layout="@layout/item_menu_category" android:id="@+id/btnBreakfast"
            android:layout_width="210dp" android:layout_height="145dp" android:layout_margin="10dp"/>

        <include layout="@layout/item_menu_category" android:id="@+id/btnAllDayDining"
            android:layout_width="210dp" android:layout_height="145dp" android:layout_margin="10dp"/>

        <include layout="@layout/item_menu_category" android:id="@+id/btnBeverages"
            android:layout_width="210dp" android:layout_height="145dp" android:layout_margin="10dp"/>

        <include layout="@layout/item_menu_category" android:id="@+id/btnHousekeeping"
            android:layout_width="210dp" android:layout_height="145dp" android:layout_margin="10dp"/>

        <include layout="@layout/item_menu_category" android:id="@+id/btnMyCart"
            android:layout_width="210dp" android:layout_height="145dp" android:layout_margin="10dp"/>

        <include layout="@layout/item_menu_category" android:id="@+id/btnCallOrder"
            android:layout_width="210dp" android:layout_height="145dp" android:layout_margin="10dp"/>
    </GridLayout>

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_hint"
        android:textColor="#88FFFFFF"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>