<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000" />

    <LinearLayout
        android:id="@+id/headerArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomRow"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_logo_text"
            android:textColor="#00E5FF"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_placeholder"
            android:textColor="#FFFFFF"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="Mon 05 Jan 2026" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="17:01" />
        <!--            android:textStyle="bold"-->


        <!--        <TextView-->
        <!--            android:id="@+id/dateText"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:textColor="#88FFFFFF"-->
        <!--            android:textSize="20sp" />-->
    </LinearLayout>

    <FrameLayout
        android:id="@+id/btnHotelAd"
        android:layout_width="450dp"
        android:layout_height="340dp"
        android:focusable="true"
        android:clickable="true"
        android:clipToPadding="false"
        android:padding="6dp"
        android:background="@drawable/tile_selector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomRow"
        app:layout_constraintStart_toEndOf="@+id/headerArea"
        app:layout_constraintEnd_toStartOf="@+id/rightGrid"
        app:layout_constraintHorizontal_bias="1">

        <VideoView
            android:id="@+id/hotelVideoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />

        <ImageView
            android:id="@+id/playOverlay"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_media_play"
            android:alpha="0.8"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_ad_label"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="15dp" />
    </FrameLayout>

    <GridLayout
        android:id="@+id/rightGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnHotelAd"
        app:layout_constraintBottom_toBottomOf="@id/btnHotelAd"
        app:layout_constraintStart_toEndOf="@id/btnHotelAd">

        <include layout="@layout/item_small_tile" android:id="@+id/btnTvGuide"
            android:layout_width="120dp" android:layout_height="110dp" />
        <include layout="@layout/item_small_tile" android:id="@+id/btnMovies"
            android:layout_width="120dp" android:layout_height="110dp" />
        <include layout="@layout/item_small_tile" android:id="@+id/btnRadio"
            android:layout_width="120dp" android:layout_height="110dp" />
        <include layout="@layout/item_small_tile" android:id="@+id/btnMyBill"
            android:layout_width="120dp" android:layout_height="110dp" />
        <include layout="@layout/item_small_tile" android:id="@+id/btnSettings"
            android:layout_width="120dp" android:layout_height="110dp" />
        <include layout="@layout/item_small_tile" android:id="@+id/btnMessages"
            android:layout_width="120dp" android:layout_height="110dp" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/item_bottom_tile" android:id="@+id/btnRoomService"
            android:layout_width="220dp" android:layout_height="140dp" android:layout_margin="10dp" />
        <include layout="@layout/item_bottom_tile" android:id="@+id/btnHotelInfo"
            android:layout_width="220dp" android:layout_height="140dp" android:layout_margin="10dp" />
        <include layout="@layout/item_bottom_tile" android:id="@+id/btnConcierge"
            android:layout_width="220dp" android:layout_height="140dp" android:layout_margin="10dp" />
        <include layout="@layout/item_bottom_tile" android:id="@+id/btnSpa"
            android:layout_width="220dp" android:layout_height="140dp" android:layout_margin="10dp" />
    </LinearLayout>

    <FrameLayout android:id="@+id/main_browse_fragment"
        android:layout_width="1dp" android:layout_height="1dp" android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>